syntax = "proto3";
package dadtkv;
option csharp_namespace = "Dadtkv";

message DadIntDto {
  string key = 1;
  int32 value = 2;
}